# Auto-Manage-Files

./: .gitignore  README.md  build_exe.py  package-lock.json  package.json  release_notes.md  requirements.txt  setup_installer.iss
src/: App.vue  __init__.py  i18n.js  main.py  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  organizer.rs  watcher.rs
src/components/: About.vue  Dashboard.vue  Icons.vue  LogViewer.vue  RuleDialog.vue  Toast.vue  Tutorial.vue
src/core/: __init__.py  config_manager.py  organizer.py  startup_manager.py  watcher.py
src/ui/: __init__.py  i18n.py  main_window.py  rule_dialog.py  system_tray.py  theme.py
