[package]
name = "auto-file-organizer"
version = "1.0.0"
description = "Auto File Organizer in Rust + Tauri + Vue"
authors = ["Px0"]
edition = "2021"

[lib]
name = "auto_file_organizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6.1"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4"] }


